migrate banner & highlight

--- a/src/pages/global.css
+++ b/src/pages/global.css
@@ -49,29 +49,16 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.text-container {
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
-  height: -webkit-fit-content;
-  height: -moz-fit-content;
-  height: fit-content;
-  overflow: hidden;
+section {
+  width:100%
 }
 
-.seperate-line {
+.container {
   width: 100%;
-}
-
-.seperate-line span {
-  display: inline;
-}
-
-.seperate-line span hr {
-  width: 25%;
-  height: 4px !important;
-  color: #e8ece6;
-  opacity: 1;
+  padding-right: 0.75rem;
+  padding-left: 0.75rem;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .navbar {
@@ -182,337 +169,6 @@ body {
     top: 30px;
     margin: 0 0 20px 0;
   }
-}
-
-.quote-1 {
-  padding-bottom: 50px;
-  margin-top: 30px;
-}
-
-@media only screen and (max-width: 1200px) {
-  .quote-1 {
-    padding-top: 30px;
-  }
-}
-
-@media only screen and (max-width: 768px) {
-  .quote-1 {
-    margin-top: 0px;
-    padding-bottom: 50px;
-  }
-}
-
-@media only screen and (max-width: 480px) {
-  .quote-1 {
-    margin-top: 0px;
-    padding-bottom: 40px;
-  }
-}
-
-.quote-1 h2 {
-  font-weight: 600;
-  font-size: 2.5rem;
-}
-
-@media only screen and (max-width: 480px) {
-  .quote-1 h2 {
-    font-size: 1.5rem;
-  }
-}
-
-.quote-1 p {
-  font-size: 1.2rem;
-}
-
-@media only screen and (max-width: 480px) {
-  .quote-1 p {
-    font-size: 1rem;
-  }
-}
-
-.highlight {
-  padding: 40px 0 60px 0;
-  background: -webkit-linear-gradient(0deg, #659999, #f4791f);
-}
-
-.highlight .banner-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  position: relative;
-  overflow: hidden;
-  -webkit-box-align: flex-start;
-  -ms-flex-align: flex-start;
-  align-items: flex-start;
-}
-
-.highlight .banner-container .text-container h2.text-break {
-  white-space: nowrap;
-}
-
-.highlight .banner-container .item {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: row;
-  flex-direction: row;
-  -webkit-box-pack: flex-start;
-  -ms-flex-pack: flex-start;
-  justify-content: flex-start;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  width: 80%;
-  min-width: 800px;
-  height: -webkit-fit-content;
-  height: -moz-fit-content;
-  height: fit-content;
-  background: #e8ece6;
-  border-radius: 15px;
-  padding: 50px;
-  margin-right: 25px;
-  -webkit-box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
-  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
-  position: relative;
-  overflow: hidden;
-  -webkit-transition: all 0.5s ease;
-  transition: all 0.5s ease;
-}
-
-.highlight .banner-container .item .award-winning {
-  width: 250px;
-  height: 50px;
-  background: #e3852d;
-  -webkit-transform: rotate(45deg);
-  transform: rotate(45deg);
-  text-align: center;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.3);
-  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.3);
-}
-
-.highlight .banner-container .item .award-winning h6 {
-  margin-bottom: 0;
-  font-weight: 700;
-  font-size: 1.2rem;
-}
-
-.highlight .banner-container .item#item-4 {
-  margin-right: 0px !important;
-}
-
-@media only screen and (max-width: 768px) {
-  .highlight .banner-container .item {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    width: 300px;
-    min-width: 300px;
-    padding: 20px;
-  }
-}
-
-.highlight .banner-container .item .highlight-img-div {
-  width: 250px;
-  min-width: 250px;
-  height: 250px;
-  border-radius: 50%;
-  border: 10px solid #0c6b66;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  position: relative;
-  overflow: hidden;
-  background-position: center !important;
-  background-size: cover !important;
-  -webkit-transition: all 0.5s ease;
-  transition: all 0.5s ease;
-}
-
-@media only screen and (max-width: 768px) {
-  .highlight .banner-container .item .highlight-img-div {
-    height: 200px;
-    width: 200px;
-    min-width: 200px;
-  }
-}
-
-.highlight .banner-container .item .highlight-img-div img {
-  width: 100%;
-  height: 100%;
-  -o-object-fit: cover;
-  object-fit: cover;
-}
-
-.highlight .banner-container .item .highlight-img-div .hover-icon-bg {
-  background: rgba(0, 0, 0, 0);
-  -webkit-transition: all 0.3s ease;
-  transition: all 0.3s ease;
-}
-
-.highlight .banner-container .item .highlight-img-div .hover-icon {
-  z-index: 999;
-  opacity: 0;
-  margin-bottom: -20px;
-  -webkit-transition: all 0.3s ease;
-  transition: all 0.3s ease;
-}
-
-.highlight .banner-container .item .highlight-img-div .hover-icon img {
-  width: 2.2rem !important;
-  height: 2.2rem !important;
-  -o-object-fit: contain !important;
-  object-fit: contain !important;
-  -webkit-filter: brightness(0) invert(0.95);
-  filter: brightness(0) invert(0.95);
-}
-
-.highlight .banner-container .item .highlight-img-div:hover .hover-icon-bg {
-  background: rgba(0, 0, 0, 0.5);
-}
-
-.highlight .banner-container .item .highlight-img-div:hover .hover-icon {
-  opacity: 1;
-  margin-bottom: 0;
-}
-
-.highlight .banner-container .item:hover {
-  -webkit-box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.4);
-  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.4);
-}
-
-.highlight .banner-container .item:hover .highlight-img-div {
-  -webkit-transform: scale(1.05) !important;
-  transform: scale(1.05) !important;
-}
-
-.highlight .banner-container .horizontal-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  position: relative;
-}
-
-@media only screen and (max-width: 480px) {
-  .highlight .banner-container .horizontal-container {
-    padding: 0 0.75rem;
-  }
-}
-
-.highlight .banner-container .horizontal-container.active {
-  cursor: -webkit-grab;
-  cursor: grab;
-}
-
-.highlight .banner-container .horizontal-container.active .item {
-  -webkit-transform: scale(0.95) !important;
-  transform: scale(0.95) !important;
-}
-
-.highlight .banner-container .item .item-inner {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  height: 250px;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
-  margin-left: 2.5rem;
-}
-
-@media only screen and (max-width: 768px) {
-  .highlight .banner-container .item .item-inner {
-    margin-left: 0;
-    height: -webkit-fit-content;
-    height: -moz-fit-content;
-    height: fit-content;
-    margin-top: 20px;
-  }
-}
-
-@media only screen and (max-width: 480px) {
-  .highlight .banner-container .item .item-inner {
-    margin-left: 0;
-    height: -webkit-fit-content;
-    height: -moz-fit-content;
-    height: fit-content;
-    margin-top: 20px;
-  }
-}
-
-.highlight .banner-container .item .item-inner h3 {
-  -ms-flex-preferred-size: 30%;
-  flex-basis: 30%;
-}
-
-@media only screen and (max-width: 768px) {
-  .highlight .banner-container .item .item-inner h3 {
-    -ms-flex-preferred-size: 20%;
-    flex-basis: 20%;
-  }
-}
-
-.highlight .banner-container .item .item-inner .role-tools {
-  -ms-flex-preferred-size: 30%;
-  flex-basis: 30%;
-}
-
-@media only screen and (max-width: 768px) {
-  .highlight .banner-container .item .item-inner .role-tools {
-    -ms-flex-preferred-size: 35%;
-    flex-basis: 35%;
-  }
-}
-
-.highlight .banner-container .item .item-inner p.description {
-  -ms-flex-preferred-size: 40%;
-  flex-basis: 40%;
-  text-align: justify;
-  font-size: 0.9rem;
-}
-
-.highlight .banner-container .item .item-inner p.description.sotm {
-  font-weight: 500;
-  color: #e3852d;
-  font-style: italic;
-}
-
-@media only screen and (max-width: 768px) {
-  .highlight .banner-container .item .item-inner p.description {
-    text-align: left;
-    -ms-flex-preferred-size: 45%;
-    flex-basis: 45%;
-  }
-}
-
-.highlight .banner-container .item .item-inner .read-more {
-  font-size: 0.8rem;
-  padding: 6px 18px !important;
 }
 
 section.introducing {
