--- a/src/pages/global.css
+++ b/src/pages/global.css
@@ -42,6 +42,19 @@ section {
   width: 100%;
 }
 
+a {
+  color: #008b8b;
+  transition: all 0.3s ease;
+}
+
+a:hover {
+  color: #0c6b66;
+}
+
+*:focus {
+  outline-color: #e47712;
+}
+
 .container {
   width: 100%;
   padding-right: 0.75rem;
@@ -258,7 +271,7 @@ section {
   }
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 992px) {
   .experience .exp-desc.desktop {
     display: none;
   }
@@ -272,25 +285,25 @@ section {
   display: block;
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 992px) {
   .experience .exp-desc.mobile {
     width: 120%;
   }
 }
 
-@media only screen and (max-width: 768px) and (max-width: 480px) {
+@media only screen and (max-width: 992px) and (max-width: 480px) {
   .experience .exp-desc.mobile {
     width: 105%;
   }
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 992px) {
   .mobile {
     display: none !important;
   }
 }
 
-@media only screen and (min-width: 768px) and (max-width: 1366px) {
+@media only screen and (min-width: 992px) and (max-width: 1366px) {
   .exp h5 {
     font-size: 1rem;
   }
@@ -300,7 +313,7 @@ section {
   }
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 992px) {
   .experience .exp-desc.mobile .exp-desc-inner {
     display: none;
     position: relative;
