--- a/src/pages/global.css
+++ b/src/pages/global.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
-
 *:hover {
   text-decoration: none !important;
 }
@@ -10,8 +8,25 @@ html {
 
 body {
   background-color: #e8ece6 !important;
-  font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+  /* font-family: -apple-system, BlinkMacSystemFont, sans-serif; */
+  font-family: 'Geist';
   overflow-x: hidden;
+}
+
+h1 {
+  letter-spacing: -1.5px !important;
+}
+
+h2 {
+  letter-spacing: -1px !important;
+}
+
+h3 {
+  letter-spacing: -1px !important;
+}
+
+h5 {
+  letter-spacing: -0.3px !important;
 }
 
 .white {
@@ -104,6 +119,10 @@ a.cyan:hover {
   padding: 60px 0;
 }
 
+.experience h6 {
+  line-height: 1.5;
+}
+
 .experience h2.display-1 {
   font-size: 60px;
   font-weight: 600;
@@ -133,6 +152,7 @@ a.cyan:hover {
 }
 
 .experience .exp h5,
+.experience .exp h6,
 .experience .exp p {
   color: rgba(0, 0, 0, 0.3);
   cursor: pointer;
@@ -150,6 +170,7 @@ a.cyan:hover {
 }
 
 .experience .exp:hover h5,
+.experience .exp:hover h6,
 .experience .exp:hover p {
   color: rgba(0, 0, 0, 0.4);
 }
@@ -159,6 +180,7 @@ a.cyan:hover {
 }
 
 .experience .exp.active h5,
+.experience .exp.active h6,
 .experience .exp.active p {
   color: black;
 }
@@ -195,7 +217,7 @@ a.cyan:hover {
 .experience .exp-desc .exp-desc-inner h5 {
   color: white;
   font-size: 1.5rem;
-  font-weight: 600;
+  font-weight: 500;
 }
 
 .experience .exp-desc .exp-desc-inner .img-container {
